--- a/index.html
+++ b/index.html
@@ -156,6 +156,34 @@
 						</div>
 					</div>					
 					-->
+
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
+							Amazon Is Producing Garbage AI English Dubs
+						</h2>
+						<p class="spotlight-article-text">
+							I’m incredibly disappointed to see Amazon produce AI English Dubs for Banana Fish and No Game No Life. These AI Dubs are soulless garbage that damages the creative works and ruins the anime viewing experience, in addition to being an absolute insult to the Voice Actors and customers. I’ve been waiting years for Banana Fish to get an English Dub but now I will never watch it, and I definitely won’t pay for it! 
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Amazon_Is_Producing_Garbage/article-media_01.jfif" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://x.com/DamanMills/status/1994553640368078943?s=20">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Amazon_Is_Producing_Garbage/article-source_01.jpg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title"><i class="fa-brands fa-twitter"></i> Daman Mills @DamanMills, "After years of fans hoping for an English dub of Banana Fish, you give it to us as AI generated garbage?"</h4>
+							</a>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://x.com/MeggieEliseVA/status/1994844941160251444?s=20">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Amazon_Is_Producing_Garbage/article-source_02.jpg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title"><i class="fa-brands fa-twitter"></i> Meggie-Elise | Voice Actor @MeggieEliseVA, "I’m extremely disappointed that @PrimeVideo decided to use AI to dub Banana Fish"</h4>
+							</a>
+						</div>						
+					</div>					
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
 							Crunchyroll, Please Keep Typesetting Anime!
