--- a/index.html
+++ b/index.html
@@ -156,7 +156,25 @@
 						</div>
 					</div>					
 					-->
-
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
+							Update, The Garbage AI English Dubs Are No Longer on Amazon!
+						</h2>
+						<p class="spotlight-article-text">
+							We did it! In a crazy turnaround win, the garbage AI English Dubs for Banana Fish and No Game No Life have been removed! Your voice matters, keep it up, don’t let your passion for this great art form we all love die at the hands of greedy corporations who don’t give a damn about fans, artists, actors, or anime!
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Amazon_Is_Producing_Garbage_Update/article-media_01.jpg" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://bsky.app/profile/milesofficial.bsky.social/post/3m6xjfqzdtk2p">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Amazon_Is_Producing_Garbage_Update/article-source_01.jpg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title"><i class="fa-brands fa-bluesky"></i> Bluesky: Miles | Anime by the Numbers @milesofficial.bsky.social‬ “BANANA FISH no longer has an English dub on Amazon”</h4>
+							</a>
+						</div>
+					</div>
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
 							Amazon Is Producing Garbage AI English Dubs
